2015-04-16  Jordan Harband  <ljharb@gmail.com>

        Number.parseInt is not === global parseInt in nightly r182673
        https://bugs.webkit.org/show_bug.cgi?id=143799

        Reviewed by Darin Adler.

        * js/number-constructor-expected.txt:
        * js/parseInt-expected.txt:
        * js/script-tests/number-constructor.js:
        * js/script-tests/parseInt.js:

2015-04-16  Tim Horton  <timothy_horton@apple.com>

        Rebaseline mouse-cursor-image-set results after r182869

        * fast/events/mouse-cursor-image-set-expected.txt:
        * platform/win/fast/events/mouse-cursor-image-set-expected.txt:
        * platform/mac/TestExpectations:
        Un-skip and land new results.

2015-04-16  Beth Dakin  <bdakin@apple.com>

        I will be investigating this in the short term, but skip these failing test for
        now.

        * platform/mac-wk2/TestExpectations:

2015-04-16  Yusuke Suzuki  <utatane.tea@gmail.com>

        [ES6] Implement Symbol.for and Symbol.keyFor
        https://bugs.webkit.org/show_bug.cgi?id=143404

        Reviewed by Geoffrey Garen.

        Add tests to check Symbol's identity over different realms.

        * js/dom/cross-frame-symbols-expected.txt: Added.
        * js/dom/cross-frame-symbols.html: Added.
        * js/dom/script-tests/cross-frame-symbols.js: Added.

2015-04-16  Beth Dakin  <bdakin@apple.com>

        Forgot to edit this TestExpectation file for 
        http://trac.webkit.org/changeset/182912

        * platform/mac-wk1/TestExpectations:

2015-04-16  Beth Dakin  <bdakin@apple.com>

        Force mouse events should go through normal mouse event handling code paths
        https://bugs.webkit.org/show_bug.cgi?id=143749
        -and corresponding-
        rdar://problem/20472895

        Reviewed by Dean Jackson.

        Just a few new tests. More to come.
        * fast/events/mouse-force-changed-expected.txt: Added.
        * fast/events/mouse-force-changed.html: Added.