@@ -15,30 +15,29 @@
             }
 
 
-            counter = 0;
-            document.addEventListener('DOMContentLoaded', function() { log('DOMContentLoaded event fired on document!'); counter++; }, false);
+            document.addEventListener('DOMContentLoaded', function() { log('DOMContentLoaded event fired on document!'); }, false);
             window.addEventListener('DOMContentLoaded', function() {
                 log('DOMContentLoaded event bubbled to window!');
-                counter++;
-                // Fire a short-duration timer that will fire before the image completes loading to ensure that
-                // DOMContentLoaded is in fact happening before the image has loaded.
-                window.setTimeout(function() { log('Timer callback called.'); counter++; }, 10)
+                timestamp = new Date().getTime();
             }, false);
             window.addEventListener('load', function() { 
+                newTimestamp = new Date().getTime();
                 log('load event fired!');
-                if (counter == 3)
-                    log('PASSED');
+                if (!timestamp)
+                    log('FAILED: DOMContentLoaded did not fire');
+                else if (timestamp == newTimestamp)
+                    log('FAILED: no time passed between DOMContentLoaded and load events');
                 else
-                    log('FAILED');
+                    log('PASSED');
             }, false);
         </script>
     </head>
     <body>
         <h1>Test case for <a href='http://bugs.webkit.org/show_bug.cgi?id=5122'>bug 5122</a>: Equivalent of Mozilla's DOMContentLoaded needed</h1>
 
-        <p>You should see a note about the DOMContentLoaded event being fired and bubbled, a timer being called, and then the load event being fired.</p>
+        <p>You should see a PASSED message.</p>
 
-        <img src='../../navigation/resources/slow-resource.pl?delay=250'>
+        <img src='/navigation/resources/slow-resource.pl?delay=250'>
         <ol id='log'>
         </ol>
     </body>
